fix: golden layout title overflow

--- a/src/renderer/src/css/golden-layout_theme.css
+++ b/src/renderer/src/css/golden-layout_theme.css
@@ -59,6 +59,11 @@
   box-shadow: 0px 0px 10px 1px rgb(0 0 0 / 60%);
 }
 
+.lm_tabdropdown_list .lm_title {
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+}
+
 .lm_header.lm_selectable {
   cursor: pointer;
 }
